parser/src/snapshots/emerald_lang_parser__context__tests__ann_assign_name.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 10,
            },
        ),
        custom: (),
        node: AnnAssign {
            target: Located {
                location: Location {
                    row: 1,
                    column: 0,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 1,
                    },
                ),
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            annotation: Located {
                location: Location {
                    row: 1,
                    column: 3,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 6,
                    },
                ),
                custom: (),
                node: Name {
                    id: "int",
                    ctx: Load,
                },
            },
            value: Some(
                Located {
                    location: Location {
                        row: 1,
                        column: 9,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 10,
                        },
                    ),
                    custom: (),
                    node: Constant {
                        value: Int(
                            1,
                        ),
                        kind: None,
                    },
                },
            ),
            simple: 1,
        },
    },
]
