parser/src/snapshots/emerald_lang_parser__context__tests__assign_for.snap
---
source: src/context.rs
expression: parse_ast
---
[
    Located {
        location: Location {
            row: 1,
            column: 0,
        },
        end_location: Some(
            Location {
                row: 1,
                column: 24,
            },
        ),
        custom: (),
        node: For {
            target: Located {
                location: Location {
                    row: 1,
                    column: 4,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 5,
                    },
                ),
                custom: (),
                node: Name {
                    id: "x",
                    ctx: Store,
                },
            },
            iter: Located {
                location: Location {
                    row: 1,
                    column: 10,
                },
                end_location: Some(
                    Location {
                        row: 1,
                        column: 17,
                    },
                ),
                custom: (),
                node: Tuple {
                    elts: [
                        Located {
                            location: Location {
                                row: 1,
                                column: 10,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 11,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    1,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 13,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 14,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    2,
                                ),
                                kind: None,
                            },
                        },
                        Located {
                            location: Location {
                                row: 1,
                                column: 16,
                            },
                            end_location: Some(
                                Location {
                                    row: 1,
                                    column: 17,
                                },
                            ),
                            custom: (),
                            node: Constant {
                                value: Int(
                                    3,
                                ),
                                kind: None,
                            },
                        },
                    ],
                    ctx: Load,
                },
            },
            body: [
                Located {
                    location: Location {
                        row: 1,
                        column: 20,
                    },
                    end_location: Some(
                        Location {
                            row: 1,
                            column: 24,
                        },
                    ),
                    custom: (),
                    node: Pass,
                },
            ],
            orelse: [],
            type_comment: None,
        },
    },
]
